Changed menu to only use small version on smallest screens. Fixed font sizes for buttons.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,21 +27,23 @@ body {
 	h1 { font-size: 3em; }
 	h2 { font-size: 2em; }
     h3 { font-size: 1em; }
-    p, input, textarea, li { font-size: 1em; }
+    p, input, textarea, a { font-size: 1em; }
 	.about {	padding: 0.5em 2em 0.5em 2em;}
 }
 @media screen and (min-width:481px ) and (max-width:768px) {
     h1 { font-size: 3em; }
     h2 { font-size: 2em; }
     h3 { font-size: 1.1em; }
-    p, input, textarea, li { font-size: 1.25em; }
+    p { font-size: 1.25em}
+    input, textarea, a { font-size: 1.1em; }
 	.about {	padding: 0.25em 1em 0.25em 1em;}
 }
 @media screen and (max-width:480px) {
     h1 { font-size: 3em; }
     h2 { font-size: 2em; }
     h3 { font-size: 1.2em; }
-    p, input, textarea, li { font-size: 1.35em; }
+    p { font-size: 1.35em}
+    input, textarea, a { font-size: 1.2em; }
 	.about {	padding: 0.2em 0.2em 0.2em 0.2em;}
 }
 
@@ -106,7 +108,7 @@ a.anchor {
     align-self:flex-end;
 }
 
-@media screen and (min-width:769px ) and (max-width:1024px) {
+@media screen and (min-width:481px ) and (max-width:1024px) {
     a.anchor {
         top: -50px;
     }
@@ -120,7 +122,7 @@ a.anchor {
     }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:480px) {
     body {
         margin: 0;
     }
@@ -137,7 +139,7 @@ a.anchor {
          max-width: none;
      }
     #header_id li a {
-        font-size: 1.3em;
+        font-size: 2em;
         width: 100vw;
         height: 1.5em;
         line-height: 1.5em;
@@ -287,13 +289,13 @@ a.anchor {
 
 .lp-button {
 	width: 150px;
-	height: 40px;
+	height: 2em;
 	border: 1px solid white;
 	border-radius: 3px;
 	color: white;
 	text-decoration: none;
 	text-align: center;
-	line-height: 40px;
+	line-height: 2em;
 }
 
 .hover-dark-gray:hover {
